assets/bridge/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: bac-import-model
  name: bac-import-model
spec:
  ports:
  - name: location
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: bac-import-model
